# bitclock-redux

./: .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: firmware-release.yml  firmware-test.yml  firmware.yml
bitclock-fw/: sdkconfig.defaults
bitclock-fw/main/: CMakeLists.txt  idf_component.yml  main.c
bitclock-fw/main/libs/: gatt.c  nvs.c  nvs.h  version.h
bitclock-fw/main/lvgl/: lv_helper.c  lv_helper.h
bitclock-fw/main/lvgl/fonts/: medium_number.c  medium_number.sh  sublabel.c  sublabel.sh
bitclock-fw/main/lvgl/img/: logo.c
bitclock-fw/main/lvgl/views/: clock.c  wifi_setup.c  wifi_setup.h
bitclock-fw/main/tasks/: eink_display.c  mqtt.c  mqtt.h  scd4x.c  sgp4x.c  sht4x.c  tasks.c  tasks.h  web_admin.c  web_admin.h  wifi.c  wifi.h  wifi_ap.c  wifi_ap.h
bitclock-fw/main/web/: admin.html  tz.json
bitclock-fw/target-rev2-esp32s3/: sdkconfig
case/: bitclock-redux case back.stl  bitclock-redux case front.stl  bitclock-redux case.step
scripts/: gen_tz.py
