set(LV_CONF_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lvgl/lv_conf.h")
idf_component_register(
  SRCS
    "libs/aqi_alert.c"
    "libs/http_buffer.c"
    "libs/i2c.c"
    "libs/nvs.c"
    "libs/ota.c"
    "libs/sensirion_gas_index_algorithm.c"
    "libs/sensor_utils.c"
    "lvgl/fonts/large_number.c"
    "lvgl/fonts/medium_number.c"
    "lvgl/fonts/sharp_display_font.c"
    "lvgl/fonts/small_number.c"
    "lvgl/fonts/sublabel.c"
    "lvgl/img/logo.c"
    "lvgl/img/material_mode_fan.c"
    "lvgl/lv_helper.c"
    "lvgl/styles.c"
    "lvgl/utils.c"
    "lvgl/views/aqi_alert.c"
    "lvgl/views/aqi_grid.c"
    "lvgl/views/clock.c"
    "lvgl/views/logo.c"
    "lvgl/views/wifi_setup.c"
    "main.c"
    "tasks/eink_display.c"
    "tasks/led.c"
    "tasks/scd4x.c"
    "tasks/sgp4x.c"
    "tasks/sharp_display.c"
    "tasks/sht4x.c"
    "tasks/tasks.c"
    "tasks/web_admin.c"
    "tasks/wifi.c"
    "tasks/wifi_ap.c"
  INCLUDE_DIRS
    "."
  EMBED_FILES
    "web/admin.html"
    "web/tz.json"
  REQUIRES
    app_update
    bootloader_support
    driver
    esp_http_client
    esp_http_server
    esp_netif
    esp_partition
    esp_wifi
    esp-tls
    json
    lvgl
    mdns
    nvs_flash
)
idf_build_set_property(COMPILE_OPTIONS "-DLV_CONF_PATH=${LV_CONF_PATH}" APPEND)
idf_build_set_property(COMPILE_OPTIONS "-DLV_KCONFIG_IGNORE=1" APPEND)
